package proxy_mesas.inter;

import proxy_mesas.model.Usuario;

public interface IDescarga {
    public void decargar(Usuario us);
}
